fix spacing
+ added missing <br> in pgp page
~ fixed colour var name for passage images
+ added link to roundsquare

--- a/style.css
+++ b/style.css
@@ -124,8 +124,9 @@ a:hover {
 }
 
 .passage img {
-    width: 93%;
-    border: 5px 5px 5px 30px solid var(--bg-color);
+    width: 95%;
+    border: 5px solid var(--light-bg);
+    border-left: 30px solid var(--light-bg);
 }
 
 .passage video {
@@ -260,6 +261,10 @@ a:hover {
         top: 7%;
         left: 0;
         width: 100%;
+    }
+
+    .phone-patch {
+        margin-bottom: 10px;
     }
 }
 
